--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@wardpeet/gatsby-plugin-static-site": "^0.2.3",
     "axios": "^0.20.0",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
